hub/k8s/app.yaml
apiVersion: v1
kind: Service
metadata:
  name: frankdb
  labels:
    app: frankdb
spec:
  type: ClusterIP
  ports:
  - port: 3306
    targetPort: 3306
    protocol: TCP
  selector:
    app: frankdb
---
apiVersion: v1
kind: Service
metadata:
  name: frankthecloud
  labels:
    app: frankthecloud
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
  selector:
    app: frankthecloud
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frankdb
spec:
  selector:
    matchLabels:
      app: frankdb
  replicas: 1
  template:
    metadata:
      labels:
        app: frankdb
    spec:
      imagePullSecrets:
        - name: docker-secret
      containers:
        - name: frankdb
          imagePullPolicy: Always
          image: seantywork/frankdb
          ports:
          - containerPort: 3306
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frankthecloud
spec:
  selector:
    matchLabels:
      app: frankthecloud
  replicas: 1
  template:
    metadata:
      labels:
        app: frankthecloud
    spec:
      imagePullSecrets:
      - name: docker-secret
      containers:
      - name: frankthecloud
        imagePullPolicy: Always
        image: seantywork/frankthecloud
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: frankhub-front
  labels:
    app: frankhub-front
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
  selector:
    app: frankhub
---
kind: Service
apiVersion: v1
metadata:
  name: frankhub-sock
spec:
  type: NodePort
  selector:
    app: frankhub
  ports:
    - nodePort: 30011
      port: 3001
      targetPort: 3001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frankhub
spec:
  selector:
    matchLabels:
      app: frankhub
  replicas: 1
  template:
    metadata:
      labels:
        app: frankhub
    spec:
      imagePullSecrets:
      - name: docker-secret
      containers:
      - name: frankhub
        imagePullPolicy: Always
        image: seantywork/frankhub
        ports:
        - containerPort: 3000
        - containerPort: 3001
