hub/k8s/ingress-front.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-uc-front
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-http-version : "1.1"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "15552000"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "15552000"

spec:
  rules:
  - host: "feebdaed.xyz"
    http:
      paths:
        - path: /front-client
          pathType: Prefix
          backend:
            service:
              name: frankhub-front
              port:
                number: 3000
  - host: "www.feebdaed.xyz"
    http:
      paths:
        - path: /front-client
          pathType: Prefix
          backend:
            service:
              name: frankhub-front
              port:
                number: 3000
