hub/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-uc

spec:
  rules:
  - host: "feebdaed.xyz"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frankthecloud
              port:
                number: 8000
  - host: "www.feebdaed.xyz"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frankthecloud
              port:
                number: 8000
